--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 	</head>
 	<body>
+		<div id="settings">
+			<form>
+				<button class="reset">Reset</button>
+				<input type="number" name="pixels">
+				<button class="change_pixel">Change pixels</button>
+			</form>
+		</div>
 
 		<div id="wrapper">
 			<div class="rows">
