Reset button properly working

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	</head>
 	<body>
 		<div id="settings">
+			<button class="resetBtn">Reset</button>
 			<form>
-				<button class="reset">Reset</button>
-				<input type="number" name="pixels">
-				<button class="change_pixel">Change pixels</button>
+				
+				<input type="number" class="pixels" value="16">
+				<button class="pixelsBtn">Change pixels</button>
 			</form>
 		</div>
 
